# willow-schema

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/config/: mod.rs  v1.rs
src/nvs/: mod.rs  v1.rs
tests/: config_v1.rs  json_schema.rs  nvs_v1.rs  provisioning_defaults.rs
xtask/: Cargo.toml
xtask/src/: main.rs
