[package]
name = "willow-schema"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "Versioned Willow configuration data contracts"
repository = "https://github.com/HeyWillow/willow-schema"

[lints.clippy]
pedantic = "forbid"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_repr = "0.1"

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"
