[package]
name = "willow-schema"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "Versioned Willow configuration data contracts"
repository = "https://github.com/HeyWillow/willow-schema"

[workspace]
members = ["xtask"]
resolver = "3"

[features]
default = []
json-schema = ["dep:schemars"]

[lints.clippy]
pedantic = "forbid"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
schemars = { version = "=1.2.1", default-features = false, features = ["derive"], optional = true }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_repr = "0.1"
url = { version = "=2.5.8", default-features = false }

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"
