[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
publish = false

[lints.clippy]
pedantic = "forbid"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
schemars = { version = "=1.2.1", default-features = false }
serde_json = "1"
willow-schema = { path = "..", features = ["json-schema"] }
